# cfi-edi-processor

./: .env.example  .gitignore  README.md  appsettings.json.example  cfi_edi_processor.spec  main.py  pyproject.toml
edi_processor/: __main__.py  cli.py  config.py  logging_config.py  runtime.py
edi_processor/models/: conversion.py  diagnosis_mapping.py  duplicate_check.py  file_submission.py  file_verification.py  inbox_observation.py  notification.py  preprocessing.py  processing.py  publish.py  received_date_override.py  transaction_count.py  validation.py  x12_update.py
edi_processor/services/: archive_service.py  converter_service.py  diagnosis_mapping_service.py  duplicate_check_service.py  email_service.py  excel_reader.py  file_discovery_service.py  file_verification_service.py  inbox_observer_service.py  incoming_publish_service.py  orchestrator.py  prefix_service.py  preprocessing_service.py  processing_summary_service.py  provider_notification_service.py  received_date_override_service.py  staging_service.py  transaction_count_service.py  transaction_report_service.py  validation_report_service.py  validation_service.py  work_cleanup_service.py  x12_date_update_service.py  x12_diagnosis_update_service.py  x12_validation_service.py
scripts/: build_exe.ps1
templates/provider_notifications/: validation_failed.html.j2  validation_failed.txt.j2
