[project]
name = "cfi-edi-processor"
version = "0.1.0"
description = "Structured Python migration for the CFI EDI processing flow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "pyodbc>=5.1.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.8.0",
]

[project.scripts]
cfi-edi-processor = "edi_processor.cli:main"
